--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.1",
+    "jwt-decode": "^3.1.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
