--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.1",
     "jwt-decode": "^3.1.2",
     "primeflex": "^3.3.1",
